--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
+    "webpack-dev-server": "^2.5.0",
+    "babel-plugin-react-html-attrs": "^2.0.0",
+    "style-loader": "^0.13.1",
+    "css-loader": "^0.25.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
+    "css-loader": "^0.25.0",
+    "style-loader": "^0.13.2",
     "webpack": "^3.0.0"
   }
 }
