--- a/package.json
+++ b/package.json
@@ -2,23 +2,26 @@
   "name": "news-src",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "root.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^2.11.2",
+    "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
+    "css-loader": "^0.25.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0",
-    "babel-plugin-react-html-attrs": "^2.0.0",
+    "react-mixin":"^2.0.2",
+    "react-router":"^2.8.1",
     "style-loader": "^0.13.1",
-    "css-loader": "^0.25.0"
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
