--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "css-loader": "^0.25.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-mixin":"^2.0.2",
-    "react-router":"^2.8.1",
+    "react-mixin": "^2.0.2",
+    "react-responsive": "^1.3.0",
+    "react-router": "^2.8.1",
     "style-loader": "^0.13.1",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
