--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
     "css-loader": "^0.25.0",
+    "fetch": "^1.1.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-mixin": "^2.0.2",
